working on linux/mac

--- a/m00/ex01/Makefile
+++ b/m00/ex01/Makefile
@@ -2,7 +2,7 @@ NAME = phonebook
 
 CC = c++
 
-CFLAGS = -std=c++98 -Wall -Wextra -Werror
+CFLAGS = -Wall -Wextra -Werror
 
 SRCS = $(wildcard *.cpp)
 
