--- a/m06/ex00/Makefile
+++ b/m06/ex00/Makefile
@@ -2,7 +2,7 @@ NAME = convert
 
 CC = c++
 
-CFLAGS = -std=c++98 -Wall -Wextra -Werror
+CFLAGS = -Wall -Wextra -Werror
 
 SRCS = $(wildcard *.cpp)
 
